Bug 189350 - Rubber band selection does not scroll the view automatically when touching the border with the mouse during selection
Summary: Rubber band selection does not scroll the view automatically when touching th...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Ignat Semenov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-11 10:42 UTC by FiNeX
Modified: 2012-03-24 16:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2009-04-11 10:42:11 UTC
1) put a folder view on the desktop
2) put n files on the folder view directory until a scrollbar appears
3) you can see all files scrolling the view (or with the mouse scroll or with the scroll bar)
4) select all the files with the mouse: starting from top, you'll expect that the view will scroll down when the mouse reach the bottom border. Instead it stops and the selection action will stop too.

I hope to have explained the bug clearly :-)

I'm using KDE compiled from SVN (r952068) and Qt 4.5.0-3 from ArchLinux repositories.
Comment 1 lexual 2010-01-23 11:33:49 UTC
Confirming for 4.4 rc1
Comment 2 Nicolas L. 2010-06-07 01:11:36 UTC
Can you reproduce using KDE 4.4.4 or 4.5beta?
Comment 3 Thijs 2011-12-02 16:55:28 UTC
Can reproduce upto 4.8b1
Comment 4 Ignat Semenov 2012-03-24 16:24:17 UTC
Git commit 7d92a7d489e05ace0ed1f5aaf187ec93a9a7fcac by Ignat Semenov.
Committed on 24/03/2012 at 17:22.
Pushed by isemenov into branch 'KDE/4.8'.

scroll automatically on dragging the rubberband over the view edge
REVIEW:104396

M  +3    -0    plasma/applets/folderview/abstractitemview.cpp
M  +60   -30   plasma/applets/folderview/iconview.cpp
M  +3    -0    plasma/applets/folderview/iconview.h

http://commits.kde.org/kde-baseapps/7d92a7d489e05ace0ed1f5aaf187ec93a9a7fcac
Comment 5 Ignat Semenov 2012-03-24 16:24:21 UTC
Git commit 8d3055fb4a0455b7f01deae5801b4ba8f67abf3e by Ignat Semenov.
Committed on 24/03/2012 at 17:22.
Pushed by isemenov into branch 'master'.

scroll automatically on dragging the rubberband over the view edge
REVIEW:104396

M  +3    -0    plasma/applets/folderview/abstractitemview.cpp
M  +60   -30   plasma/applets/folderview/iconview.cpp
M  +3    -0    plasma/applets/folderview/iconview.h

http://commits.kde.org/kde-baseapps/8d3055fb4a0455b7f01deae5801b4ba8f67abf3e