scroll automatically on dragging the rubberband over the view edge

BUG:189350
REVIEW:104396